--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.0",
+    "@types/better-sqlite3": "^7.6.13",
     "bits-ui": "^2.8.6",
     "clsx": "^2.1.1",
     "eslint": "^9.18.0",
@@ -70,6 +71,9 @@
     "svelte"
   ],
   "dependencies": {
+    "better-sqlite3": "^12.2.0",
+    "drizzle-kit": "^0.31.4",
+    "drizzle-orm": "^0.44.2",
     "lucide-svelte": "^0.525.0"
   }
 }
