--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
     "eslint-plugin-svelte": "^3.0.0",
     "formsnap": "^2.0.1",
     "globals": "^16.0.0",
+    "mode-watcher": "^1.0.8",
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "publint": "^0.3.2",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "svelte-sonner": "^1.0.5",
     "sveltekit-superforms": "^2.26.1",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
