--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "svelte"
   ],
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "better-sqlite3": "^12.2.0",
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.2",
